<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_presensi">

	<fragment
		android:id="@+id/navigation_kegiatan"
		android:name="com.example.dolibarr.ui.kegiatan.KegiatanFragment"
		android:label="@string/title_kegiatan"
		tools:layout="@layout/fragment_kegiatan" />

    <fragment
        android:id="@+id/navigation_presensi"
        android:name="com.example.dolibarr.ui.presensi.PresensiFragment"
        android:label="@string/title_presensi"
        tools:layout="@layout/fragment_presensi" />

	<fragment
		android:id="@+id/navigation_toko"
		android:name="com.example.dolibarr.ui.toko.TokoFragment"
		android:label="@string/title_toko"
		tools:layout="@layout/fragment_toko" />

	<fragment
		android:id="@+id/navigation_pengantaran"
		android:name="com.example.dolibarr.ui.pengantaran.PengantaranFragment"
		android:label="@string/title_toko"
		tools:layout="@layout/fragment_toko" />

    <fragment
        android:id="@+id/navigation_keluar"
        android:name="com.example.dolibarr.ui.keluar.KeluarFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>
