<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	card_view:cardCornerRadius="6dp"
	card_view:cardElevation="3dp"
	card_view:cardUseCompatPadding="true">

	<ImageView
		android:id="@+id/toko_imgViewHapus"
		android:layout_width="30dp"
		android:layout_height="30dp"
		android:layout_gravity="right|top"
		android:contentDescription="Close"
		android:src="@drawable/ic_baseline_delete_24"
		tools:ignore="RtlHardcoded" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="fill_horizontal"
		android:gravity="center"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal">

			<ImageView
				android:id="@+id/toko_imgViewfoto"
				android:layout_width="277dp"
				android:layout_height="124dp"
				android:layout_gravity="left"
				android:layout_weight="1"
				android:contentDescription="@string/app_name"
				android:paddingTop="15dp"
				android:src="@drawable/store"
				tools:ignore="RtlHardcoded" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:layout_weight="1"
				android:orientation="vertical"
				android:padding="5dp">

				<TextView
					android:id="@+id/toko_tvNama"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="2dp"
					android:text="{nama}"
					android:textAppearance="?android:textAppearanceSmall"
					android:textColor="@color/colorPrimaryDark"
					android:textSize="20sp"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/toko_tvAlamat"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="2dp"
					android:text="{alamat}"
					android:textAppearance="?android:textAppearanceSmall"
					android:textColor="@color/colorPrimaryDark"
					android:textSize="20sp"
					android:textStyle="bold" />
			</LinearLayout>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/toko_btnProfile"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginEnd="2sp"
				android:layout_weight="2"
				android:backgroundTint="#0091EA"
				android:gravity="center|clip_vertical|center_horizontal|center_vertical"
				android:text="@string/profil_toko"
				android:textAlignment="center"
				android:textColor="@android:color/white" />

			<Button
				android:id="@+id/toko_btnLokasi"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginEnd="2sp"
				android:layout_weight="2"
				android:backgroundTint="#FF6D00"
				android:gravity="center|clip_vertical|center_horizontal|center_vertical"
				android:text="Lokasi"
				android:textAlignment="center"
				android:textColor="@android:color/white" />

			<Button
				android:id="@+id/toko_btnPesanan"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="2"
				android:backgroundTint="@android:color/holo_green_dark"
				android:gravity="center|clip_vertical|center_horizontal|center_vertical"
				android:text="@string/daftar_pesanan"
				android:textAlignment="center"
				android:textColor="@android:color/white" />
		</LinearLayout>
	</LinearLayout>

</androidx.cardview.widget.CardView>
