<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/white"
	android:layout_marginBottom="60dp"
	tools:context=".ui.presensi.PresensiFormFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:paddingBottom="16dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">



			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:color/white"
				android:orientation="vertical">


				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:padding="5sp">

					<TextView
						android:id="@+id/presensi_tvJenis"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:background="#00B8D4"
						android:gravity="center"
						android:padding="5dp"
						android:text="{{ JENIS PRESENSI }}"
						android:textColor="@android:color/black"
						android:textSize="20sp" />
				</LinearLayout>

				<ImageView
					android:id="@+id/presensi_imageView"
					android:layout_width="250dp"
					android:layout_height="250dp"
					android:layout_gravity="center"
					android:layout_marginTop="10dp"

					android:src="@drawable/login" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:padding="5sp">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:background="#FFC107"
						android:gravity="center"
						android:padding="5dp"
						android:text="Klik gambar untuk mengambil foto"
						android:textColor="@color/design_default_color_on_secondary"
						android:textSize="20sp" />
				</LinearLayout>

				<Button
					android:visibility="gone"
					android:id="@+id/presensi_btnAmbilFoto"
					android:layout_width="300dp"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:drawableStart="@android:drawable/ic_menu_camera"
					android:text="@string/ambil_foto"
					android:textColor="@android:color/black"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintVertical_bias="0.685" />

			</LinearLayout>

		</RelativeLayout>


		<androidx.cardview.widget.CardView
			android:id="@+id/list_cardview"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:foreground="?attr/selectableItemBackground"
			app:cardBackgroundColor="@android:color/white"
			app:cardCornerRadius="2dp"
			app:cardElevation="4dp">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:paddingStart="10dp"

					android:paddingTop="8dp"
					tools:ignore="RtlSymmetry">

					<TextView
						android:layout_width="0dp"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:paddingBottom="4dp"
						android:text="@string/latitude"
						android:textSize="14sp"
						android:textStyle="normal" />

					<TextView
						android:id="@+id/latitude"
						android:layout_width="0dp"
						android:layout_height="match_parent"
						android:layout_weight="2"
						android:text="@string/novalues"
						android:textAppearance="?attr/textAppearanceListItem"
						android:textSize="15sp"
						android:textStyle="bold" />

				</LinearLayout>

				<RelativeLayout
					android:id="@+id/category_line_layout"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:orientation="vertical">

					<View
						android:id="@+id/verticalLine"
						android:layout_width="match_parent"
						android:layout_height="1dip"
						android:layout_marginTop="8dp"
						android:layout_marginBottom="8dp"
						android:background="#e9e8e8" />
				</RelativeLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:paddingStart="10dp"
					android:paddingTop="2dp"

					android:paddingBottom="10dp"
					tools:ignore="RtlSymmetry">

					<TextView
						android:layout_width="0dp"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:paddingBottom="8dp"
						android:text="@string/longitude"
						android:textSize="14sp"
						android:textStyle="normal" />

					<TextView
						android:id="@+id/longitude"
						android:layout_width="0dp"
						android:layout_height="match_parent"
						android:layout_weight="2"
						android:text="@string/novalues"
						android:textAppearance="?attr/textAppearanceListItem"
						android:textSize="15sp"
						android:textStyle="bold" />

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:paddingStart="10dp"
					android:paddingTop="8dp"
					tools:ignore="RtlSymmetry">

					<EditText
						android:id="@+id/presensi_etKeterangan"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"

						android:gravity="top|left"
						android:hint="Keterangan"
						android:inputType="textMultiLine"
						android:overScrollMode="always"
						android:scrollbarStyle="insideInset"
						android:background="@drawable/edit_text_background"
						android:scrollbars="vertical"
						android:lines="6"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:scrollHorizontally="false" />

				</LinearLayout>


				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:paddingStart="10dp"
					android:paddingTop="8dp"
					tools:ignore="RtlSymmetry">

					<Button
						android:id="@+id/presensi_btnKirim"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:drawableStart="@drawable/ic_baseline_cloud_upload_24"
						android:text="@string/kirim_pesensi"
						android:textColor="@android:color/black"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintVertical_bias="0.685" />

				</LinearLayout>

			</LinearLayout>

		</androidx.cardview.widget.CardView>

	</LinearLayout>
</ScrollView>
